0722/cell_4/nohup.out
  File "cell4.py", line 325
    m.bias.data.fill_(0)s
                        ^
SyntaxError: invalid syntax
(19876, 32, 32, 3)
_netD_D (
  (linear): Linear (128 -> 1)
)
_netD_Q (
  (softmax): LogSoftmax ()
  (linear2): Linear (128 -> 4)
)
17.5376799107 20 111.142318726 1.88892841339
16.9257390499 40 92.0517425537 1.98935031891
16.8854942322 60 84.7829971313 1.41464972496
(19876, 32, 32, 3)
17.3819298744 80 64.1907348633 0.685549497604
_netD_D (
  (linear): Linear (128 -> 1)
)
_netD_Q (
  (softmax): LogSoftmax ()
  (linear2): Linear (128 -> 4)
)
30.0049169064 100 53.69140625 0.746417462826
36.5442090034 20 120.069999695 1.47660803795
33.2260580063 120 48.5306015015 1.55990004539
34.8448548317 40 74.1932983398 1.65574908257
34.1389110088 140 36.481464386 0.175976663828
34.4473369122 60 54.8511886597 1.4522292614
34.5267758369 160 42.9456481934 1.07181227207
34.4096670151 80 41.0416946411 0.814039349556
34.3220348358 180 42.2955627441 1.27177429199
34.2309799194 100 42.9747543335 2.56977081299
34.0894730091 200 24.5555229187 0.301863372326
Traceback (most recent call last):
  File "cell4.py", line 628, in <module>
    coherent_array = get_matrix(netD, netD_Q, cluster_loader, label)
TypeError: get_matrix() takes exactly 5 arguments (4 given)
29.8818819523 120 47.968208313 0.216050669551
17.7148292065 140 38.6468772888 0.0816858783364
17.7339048386 160 37.6301498413 0.748471617699
17.2151358128 180 41.6364822388 2.196829319
17.5339648724 200 35.4848060608 0.0463514328003
Traceback (most recent call last):
  File "cell4.py", line 628, in <module>
    coherent_array = get_matrix(netD, netD_Q, cluster_loader, label)
TypeError: get_matrix() takes exactly 5 arguments (4 given)
(19876, 32, 32, 3)
_netD_D (
  (linear): Linear (128 -> 1)
)
_netD_Q (
  (softmax): LogSoftmax ()
  (linear2): Linear (128 -> 4)
)
34.8040788174 20 119.92086792 2.31892347336
32.2838218212 40 94.6551589966 1.40785169601
32.3753650188 60 79.4549407959 1.68767488003
32.4872808456 80 59.0683097839 0.573426008224
32.6396279335 100 58.4310913086 0.483160018921
32.573112011 120 41.1596260071 1.67961883545
32.4332311153 140 38.0631484985 0.132611468434
32.59720397 160 32.6933822632 0.68675583601
32.4466049671 180 26.0836048126 1.79950869083
32.6304500103 200 32.0928153992 0.60458278656
[[ 76 639   9  18]
 [ 16 460   0   1]
 [  1  33   0   0]
 [  3 703  12   0]]
Traceback (most recent call last):
  File "cell4.py", line 630, in <module>
    cout_auc(coherent_array,4)
  File "/disk1/cell_work/0722/cell_4/clustering_0806.py", line 45, in cout_auc
    accuracy = float(coherent_array[0][i]+coherent_array[1][j]+coherent_array[2][m]+coherent_array[3][a]+coherent_array[3][b])/coherent_array.sum()
IndexError: index 4 is out of bounds for axis 0 with size 4
